--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Demos - Lee Murray</title>
+  <title>Demos | MRLEEMURRAY</title>
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <style>
     * {
@@ -65,7 +65,7 @@
     }
     .demo-path {
       font-size: 12px;
-      color: #007acc;
+      color: #ffb30f;
       margin-top: 12px;
       font-family: 'Courier New', monospace;
     }
