Update demo descriptions and adjust subtitle margin for better layout

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     .subtitle {
       font-size: 16px;
       color: #999999;
-      margin-bottom: 48px;
+      margin-bottom: 16px;
     }
     .demos {
       display: grid;
@@ -78,7 +78,7 @@
       <a href="/chat-input-prototype/" class="demo-card">
         <div class="demo-title">Chat Input Prototype</div>
         <div class="demo-description">
-          VSCode-inspired chat interface with token tracking, animation controls, and message history.
+          Chat interface with token tracking & animation controls.
         </div>
         <div class="demo-path">/chat-input-prototype/</div>
       </a>
@@ -86,7 +86,7 @@
       <a href="/gutter-tab/" class="demo-card">
         <div class="demo-title">Gutter Tab</div>
         <div class="demo-description">
-          Explorations for gutter tab behaviors and interactions.
+          Explorations for gutter tab behaviors and interactions for NES.
         </div>
         <div class="demo-path">/gutter-tab/</div>
       </a>
