Update subtitle text and enhance demo card hover effects

--- a/index.html
+++ b/index.html
@@ -51,12 +51,18 @@
       border-color: #ffb30f;
       background: #2d2d30;
     }
+
     .demo-title {
       font-size: 20px;
       font-weight: 600;
       color: #ffffff;
       margin-bottom: 8px;
     }
+
+    .demo-card:hover > .demo-title {
+      color: #ffb30f;
+    }
+    
     .demo-description {
       font-size: 14px;
       color: #999999;
@@ -72,7 +78,7 @@
 <body>
   <div class="container">
     <h1>Demos</h1>
-    <p class="subtitle">Interactive prototypes and explorations</p>
+    <p class="subtitle">Interactive prototypes & explorations</p>
     
     <div class="demos">
       <a href="/chat-input-prototype/" class="demo-card">
