Update font styles and demo title for improved aesthetics and consistency

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Demos | MRLEEMURRAY</title>
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Quattrocento:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -12,7 +15,7 @@
       box-sizing: border-box;
     }
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      font-family: "Lato", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
       background: #1e1e1e;
       color: #cccccc;
       padding: 40px 20px;
@@ -23,9 +26,10 @@
       margin: 0 auto;
     }
     h1 {
+      font-family: "Quattrocento", Georgia, "Times New Roman", serif;
       font-size: 32px;
-      font-weight: 600;
-      margin-bottom: 12px;
+      font-weight: 700;
+      margin-bottom: 4px;
       color: #ffffff;
     }
     .subtitle {
@@ -41,20 +45,16 @@
       padding: 16px;
       text-decoration: none;
       color: inherit;
-      transition: all 0.2s ease;
       display: block;
     }
     .demo-card:not(:first-child) {
       border-top: 1px solid #3c3c3c;
     }
-    .demo-card:hover {
-      border-color: #ffb30f;
-      background: #2d2d30;
-    }
 
     .demo-title {
+      font-family: "Quattrocento", Georgia, "Times New Roman", serif;
       font-size: 20px;
-      font-weight: 600;
+      font-weight: 700;
       color: #ffffff;
       margin-bottom: 8px;
     }
@@ -62,7 +62,7 @@
     .demo-card:hover > .demo-title {
       color: #ffb30f;
     }
-    
+
     .demo-description {
       font-size: 14px;
       color: #999999;
@@ -71,9 +71,9 @@
       font-size: 12px;
       color: #ffb30f;
       margin-top: 12px;
-      font-family: 'Courier New', monospace;
+      font-family: "Cascadia Code", "SF Mono", Monaco, "Roboto Mono", Consolas, "Courier New", monospace;
     }
-  </style>
+  </link>
 </head>
 <body>
   <div class="container">
@@ -82,7 +82,7 @@
     
     <div class="demos">
       <a href="/chat-input-prototype/" class="demo-card">
-        <div class="demo-title">Chat Input Prototype</div>
+        <div class="demo-title">Chat Tokens</div>
         <div class="demo-description">
           Chat interface with token tracking & animation controls.
         </div>
