Fix closing tag for style element in index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       margin-top: 12px;
       font-family: "Cascadia Code", "SF Mono", Monaco, "Roboto Mono", Consolas, "Courier New", monospace;
     }
-  </link>
+  </style>
 </head>
 <body>
   <div class="container">
