Wrap title and subtitle in a container for improved layout consistency

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       max-width: 800px;
       margin: 0 auto;
     }
+
+    .title-container {
+        padding-left: 16px;
+    }
     h1 {
       font-family: "Quattrocento", Georgia, "Times New Roman", serif;
       font-size: 32px;
@@ -77,8 +81,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Demos</h1>
-    <p class="subtitle">Interactive prototypes & explorations</p>
+    <div class="title-container">
+        <h1>Demos</h1>
+        <p class="subtitle">Interactive prototypes & explorations</p>
+    </div>
     
     <div class="demos">
       <a href="/chat-input-prototype/" class="demo-card">
