feat: initialize agent-sessions project with Vue 3 and Vite
- Added package.json for project dependencies and scripts
- Created index.html as the entry point for the application
- Developed App.vue component with basic layout and styling
- Set up main.js to mount the Vue application
- Included global styles in style.css for consistent design
- Configured Vite with vite.config.js for project build and development
- Added favicon.svg for chat-input-prototype and gutter-tab projects

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     .demo-path {
       font-size: 12px;
       color: #ffb30f;
-      margin-top: 12px;
+      margin-top: 8px;
       font-family: "Cascadia Code", "SF Mono", Monaco, "Roboto Mono", Consolas, "Courier New", monospace;
     }
   </style>
@@ -87,6 +87,14 @@
     </div>
     
     <div class="demos">
+      <a href="/agent-sessions/" class="demo-card">
+        <div class="demo-title">Agent Sessions</div>
+        <div class="demo-description">
+          Prototype for agent session behaviors and interactions.
+        </div>
+        <div class="demo-path">/agent-sessions/</div>
+      </a>
+
       <a href="/chat-input-prototype/" class="demo-card">
         <div class="demo-title">Chat Tokens</div>
         <div class="demo-description">
