Add theme-2026-blur-test to demos index

--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
         </div>
         <div class="demo-path">/gutter-tab/</div>
       </a>
+
+      <a href="/theme-2026-blur-test/" class="demo-card">
+        <div class="demo-title">Theme 2026 Blur Test</div>
+        <div class="demo-description">
+          Interactive test app for CSS blur effects in VS Code's 2026 themes with draggable overlays.
+        </div>
+        <div class="demo-path">/theme-2026-blur-test/</div>
+      </a>
     </div>
   </div>
 </body>
