feat: add bento-layout build steps and update index.html with demo link

--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
         <div class="demo-path">/agent-sessions/</div>
       </a>
 
+      <a href="/bento-layout/" class="demo-card">
+        <div class="demo-title">Bento Layout</div>
+        <div class="demo-description">
+          Bento box workspace layout with drag, resize, split, repo switching, session management, and cell focus modal.
+        </div>
+        <div class="demo-path">/bento-layout/</div>
+      </a>
+
       <a href="/chat-input-prototype/" class="demo-card">
         <div class="demo-title">Chat Tokens</div>
         <div class="demo-description">
